# admeta-hub

./: .gitignore  README.md
.github/workflows/: pages.yml
backend/: .env.example  pyproject.toml
backend/admeta/: __init__.py  canonical.py  config.py  models.py  pipeline.py  platforms.py  review.py
backend/admeta/api/: app.py
backend/admeta/crawler/: __main__.py  base.py  engine.py  fetchers.py  google.py
backend/admeta/db/: store.py
backend/admeta/extract/: __main__.py  engine.py  google.py  meta.py  supermetrics.py  table.py  x.py
backend/admeta/normalize/: autoseed.py  build.py  cleanup.py  eval_map.py  mapper.py
backend/tests/: test_canonical.py  test_parsers.py
docs/: ARCHITECTURE.md  CANONICAL_SCHEMA.md  ROADMAP.md
infra/: docker-compose.yml
infra/sql/: 001_init.sql
scripts/: build_web.py  run_search.bat  run_weekly.bat
web/: _template.html  index.html
