[project]
name = "admeta-hub"
version = "0.1.0"
description = "AI 기반 광고 플랫폼 메타데이터 표준화 플랫폼 — backend pipeline & API"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]
# browser fetch (Meta/TikTok/Amazon SPA). 설치 후: python -m playwright install chromium
browser = [
    "playwright>=1.45",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["admeta*"]
